# programming_examples

./: .gitignore  README.md  dependencies.rosinstall
boost_python_exports/: README.md
boost_python_exports/example_package/: CMakeLists.txt  package.xml
boost_python_exports/example_package/include/example_package/: ExampleClass.hpp  Exceptions.hpp
boost_python_exports/example_package/include/example_package/implementation/: ExampleClassImplementation.hpp
boost_python_exports/example_package/launch/: example_package.launch
boost_python_exports/example_package/src/: ExampleClass.cpp  ExampleProgram.cpp
boost_python_exports/example_package/test/: TestExampleClass.cpp
boost_python_exports/example_package_python/: CMakeLists.txt  package.xml  setup.py
boost_python_exports/example_package_python/include/example_package_python/: Converters.hpp
boost_python_exports/example_package_python/python/example_package_python/: __init__.py
boost_python_exports/example_package_python/src/: ExampleClass.cpp  python_module.cpp
boost_python_exports/example_package_python/test/: Test.py
boost_python_exports/rocket/: CMakeLists.txt  package.xml
boost_python_exports/rocket/include/rocket/: rocket.h
boost_python_exports/rocket/src/: rocket.cpp
boost_python_exports/rocket_python/: CMakeLists.txt  package.xml  setup.py
boost_python_exports/rocket_python/python/rocket/: __init__.py
boost_python_exports/rocket_python/src/: exportRocket.cpp  module.cpp
nlopt_export_test/: CMakeLists.txt  package.xml
nlopt_export_test/src/: ExampleProgram.cpp
